
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
int checklf(void *sd,int len)
{
    char *a;
    int i=0;

    a=(char *)sd;
    for(i=0;i<len;i++)
        if(*(a+i)=='\n')
            return -1;
    return 0;
}
